crates/biome_cli/tests/snapshots/main_cases_migrate_v2/should_migrate_aws_config.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome migrate --write
```

## `biome.json`

```json
{
  "root": false,
  "$schema": "https://biomejs.dev/schemas/0.0.0/schema.json",
  "files": {
    "maxSize": 5242880,
    "includes": ["**", "!**/__fixtures__/**", "!**/package.json"]
  },
  "formatter": {
    "enabled": true,
    "indentStyle": "space",
    "lineWidth": 100
  },
  "linter": {
    "rules": {
      "preset": "recommended",
      "complexity": {
        "noForEach": "off"
      },
      "correctness": {
        "noUndeclaredVariables": "error",
        "noUnusedVariables": "error",
        "noInvalidBuiltinInstantiation": "error"
      },
      "style": {
        "noNamespace": "error",
        "useConsistentArrayType": {
          "level": "error",
          "options": { "syntax": "shorthand" }
        }
      },
      "suspicious": {
        "noEmptyBlockStatements": "error"
      }
    }
  },
  "javascript": { "formatter": { "trailingCommas": "es5" } },
  "vcs": {
    "enabled": true,
    "clientKind": "git",
    "useIgnoreFile": false
  }
}
```

# Emitted Messages

```block
configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Migration results:
  
  - biome.json: configuration successfully migrated.
  

```
