crates/biome_cli/tests/snapshots/main_cases_migrate_v2/should_migrate_issue_5465.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome migrate --write
```

## `biome.json`

```json
{
  "root": false,
  "linter": {
    "enabled": true,
    "rules": {
      "suspicious": {
        "noDebugger": "error",
        "noShadowRestrictedNames": "off",
        "noExplicitAny": "off",
        "noAsyncPromiseExecutor": "off",
        "noEmptyInterface": "error",
        "noAssignInExpressions": "error",
        "noConsole": {
          "level": "error",
          "options": {
            "allow": ["info", "error", "warn", "time", "timeEnd"]
          }
        },
        "noPrototypeBuiltins": "error",
        "noVar": "error"
      },
      "style": {
        "useNamingConvention": {
          "level": "error",
          "options": {
            "strictCase": false
          }
        },
        "noDefaultExport": "error"
      },
      "correctness": {
        "noConstantCondition": "error",
        "noInvalidConstructorSuper": "error",
        "noUnusedVariables": "error",
        "noUnreachable": "error",
        "noUnsafeFinally": "error",
        "noSwitchDeclarations": "off",
        "noSelfAssign": "off",
        "useValidTypeof": "error"
      }
    }
  }
}
```

# Emitted Messages

```block
configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Migration results:
  
  - biome.json: configuration successfully migrated.
  

```
