crates/biome_cli/tests/snapshots/main_cases_migrate_v2/should_migrate_nested_config.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome migrate
```

## `bar/biome.json`

```json
{ "linter": { "rules": { "recommended": true } } }
```

## `biome.json`

```json
{ "linter": { "rules": { "recommended": true } } }
```

## `foo/biome.json`

```json
{ "linter": { "rules": { "recommended": true } } }
```

# Emitted Messages

```block
<TEMP_DIR>/should_migrate_nested_config/bar/biome.json migrate ━━━━━━━━━━━━━━━━━━━━

  i Configuration file can be updated.
  
  - {·"linter":·{·"rules":·{·"recommended":·true·}·}·}
  + {·"root":·false,"linter":·{·"rules":·{·"preset":·"none"·}·}·}
  

```

```block
<TEMP_DIR>/should_migrate_nested_config/biome.json migrate ━━━━━━━━━━━━━━━━━━━━

  i Configuration file can be updated.
  
  - {·"linter":·{·"rules":·{·"recommended":·true·}·}·}
  + {·"linter":·{·"rules":·{·"preset":·"none"·}·}·}
  

```

```block
<TEMP_DIR>/should_migrate_nested_config/foo/biome.json migrate ━━━━━━━━━━━━━━━━━━━━

  i Configuration file can be updated.
  
  - {·"linter":·{·"rules":·{·"recommended":·true·}·}·}
  + {·"root":·false,"linter":·{·"rules":·{·"preset":·"none"·}·}·}
  

```

```block
configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Migration results:
  
  - <TEMP_DIR>/should_migrate_nested_config/bar/biome.json: configuration needs migration.
  - <TEMP_DIR>/should_migrate_nested_config/biome.json: configuration needs migration.
  - <TEMP_DIR>/should_migrate_nested_config/foo/biome.json: configuration needs migration.
  
  i Use --write to apply the changes.
  
  $ biome migrate --write
  

```
