crates/biome_cli/tests/snapshots/main_cases_migrate_v2/should_successfully_migrate_knip.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome migrate --write
```

## `biome.json`

```json
{
  "root": false,
  "$schema": "https://biomejs.dev/schemas/0.0.0/schema.json",
  "files": {
    "includes": [
      "**",
      "!**/dist",
      "!**/fixtures",
      "!**/packages/knip/package.json",
      "!**/packages/knip/vendor/bash-parser/index.js",
      "!**/packages/docs/.astro"
    ]
  },
  "assist": { "actions": { "source": { "organizeImports": "on" } } },
  "linter": {
    "enabled": true,
    "rules": {
      "preset": "recommended",
      "correctness": {
        "noUnusedVariables": "error",
        "noUnusedImports": "error"
      },
      "complexity": {
        "useLiteralKeys": "off"
      },
      "nursery": {},
      "style": {
        "noParameterAssign": "off",
        "useNodeAssertStrict": "error",
        "noRestrictedImports": {
          "level": "error",
          "options": {
            "paths": {
              "node:path": "Please use src/util/path.js instead.",
              "path": "Please use src/util/path.js instead."
            }
          }
        }
      },
      "suspicious": {
        "noExplicitAny": "off",
        "noConsole": { "level": "error", "options": { "allow": ["log"] } }
      }
    }
  },
  "formatter": {
    "enabled": true,
    "lineWidth": 120,
    "indentStyle": "space",
    "formatWithErrors": true
  },
  "javascript": {
    "formatter": {
      "quoteStyle": "single",
      "arrowParentheses": "asNeeded",
      "trailingCommas": "es5"
    }
  },
  "json": {
    "formatter": {
      "lineWidth": 80
    }
  },
  "css": {
    "formatter": {
      "quoteStyle": "single"
    }
  },
  "overrides": [
    {
      "includes": ["**/*.astro"],
      "linter": {
        "rules": {
          "correctness": {
            "noUnusedVariables": "off",
            "noUnusedImports": "off"
          }
        }
      }
    },
    {
      "includes": [
        "**/packages/docs/**",
        "**/packages/knip/scripts/**",
        "**/packages/knip/src/cli.ts",
        "**/packages/knip/src/reporters/**",
        "**/packages/knip/src/util/cli-arguments.ts",
        "**/packages/knip/src/util/debug.ts"
      ],
      "linter": {
        "rules": {
          "suspicious": {
            "noConsole": { "level": "off", "options": { "allow": ["log"] } }
          }
        }
      }
    },
    {
      "includes": ["**/packages/knip/fixtures/**"],
      "assist": { "actions": { "source": { "organizeImports": "off" } } },
      "linter": {
        "rules": {
          "correctness": {
            "noUnusedVariables": "off",
            "noUnusedImports": "off"
          },
          "style": {
            "useImportType": "off"
          }
        }
      }
    },
    {
      "includes": [
        "**/packages/knip/test/util/get-inputs-from-scripts.test.ts"
      ],
      "formatter": {
        "lineWidth": 200
      }
    }
  ]
}
```

# Emitted Messages

```block
configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Migration results:
  
  - biome.json: configuration successfully migrated.
  

```
