crates/biome_cli/tests/snapshots/main_cases_migrate_v2/should_successfully_migrate_sentry.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome migrate --write
```

## `biome.json`

```json
{
  "root": false,
  "$schema": "./node_modules/@biomejs/biome/configuration_schema.json",
  "vcs": {
    "enabled": true,
    "clientKind": "git",
    "useIgnoreFile": false,
    "defaultBranch": "master"
  },
  "assist": { "actions": { "source": { "organizeImports": "off" } } },
  "linter": {
    "enabled": true,
    "rules": {
      "preset": "none",
      "a11y": {},
      "correctness": {
        "noGlobalObjectCalls": "error",
        "noUnreachable": "error",
        "useIsNan": "error",
        "noUnusedPrivateClassMembers": "error",
        "noInvalidUseBeforeDeclaration": "error",
        "noNodejsModules": "error"
      },
      "complexity": {
        "useFlatMap": "error",
        "useOptionalChain": "error",
        "noEmptyTypeParameters": "error",
        "noUselessLoneBlockStatements": "error",
        "noUselessEmptyExport": "error",
        "noUselessConstructor": "error",
        "noUselessTypeConstraint": "error",
        "noExcessiveNestedTestSuites": "error",
        "noCommaOperator": "error"
      },
      "nursery": {},
      "performance": {
        "noBarrelFile": "error"
      },
      "security": {
        "noDangerouslySetInnerHtmlWithChildren": "error",
        "noBlankTarget": "error"
      },
      "suspicious": {
        "noDebugger": "error",
        "noDoubleEquals": "error",
        "noDuplicateJsxProps": "error",
        "noDuplicateObjectKeys": "error",
        "noDuplicateParameters": "error",
        "noDuplicateCase": "error",
        "noFallthroughSwitchClause": "error",
        "noRedeclare": "error",
        "noSparseArray": "error",
        "noUnsafeDeclarationMerging": "error",
        "noUnsafeNegation": "error",
        "useIsArray": "error",
        "noApproximativeNumericConstant": "error",
        "noMisrefactoredShorthandAssign": "error",
        "useAwait": "error",
        "useNamespaceKeyword": "error",
        "noFocusedTests": "error",
        "noDuplicateTestHooks": "error",
        "noVar": "error"
      },
      "style": {
        "noShoutyConstants": "error",
        "noParameterProperties": "error",
        "useConst": "error",
        "useShorthandFunctionType": "error",
        "useExportType": "error",
        "useImportType": "error",
        "useNodejsImportProtocol": "error",
        "useLiteralEnumMembers": "error",
        "useEnumInitializers": "error",
        "useAsConstAssertion": "error",
        "useBlockStatements": "error",
        "noRestrictedImports": {
          "level": "warn",
          "options": {
            "paths": {}
          }
        }
      }
    }
  },
  "files": {
    "ignoreUnknown": true,
    "includes": [
      "**",
      "!**/*/trace.json",
      "!**/static/app/data/world.json",
      "!**/*.sourcemap.js",
      "!**/*.min.js",
      "!**/fixtures",
      "!**/.devenv",
      "!**/package.json"
    ]
  },
  "css": {
    "formatter": {
      "enabled": false
    },
    "linter": {
      "enabled": false
    }
  },
  "formatter": {
    "enabled": true,
    "formatWithErrors": true,
    "indentStyle": "space",
    "indentWidth": 2,
    "lineEnding": "lf",
    "includes": ["**", "!**/tests/**/*.json"]
  },
  "javascript": {
    "formatter": {
      "enabled": false,
      "lineWidth": 90,
      "quoteStyle": "single",
      "jsxQuoteStyle": "double",
      "quoteProperties": "asNeeded",
      "trailingCommas": "es5",
      "semicolons": "always",
      "arrowParentheses": "asNeeded",
      "bracketSpacing": false,
      "bracketSameLine": false
    }
  },
  "json": {
    "formatter": {
      "enabled": true
    },
    "parser": {
      "allowComments": true,
      "allowTrailingCommas": true
    }
  },
  "overrides": [
    {
      "includes": [
        "**/api-docs/**/*.ts",
        "**/build-utils/**/*.ts",
        "**/config/**/*.ts",
        "**/scripts/**",
        "**/tests/js/sentry-test/loadFixtures.ts",
        "**/tests/js/jest-pegjs-transform.js",
        "**/tests/js/setup.ts",
        "**/tests/js/test-balancer/index.js",
        "**/*.config.ts"
      ],
      "linter": {
        "rules": {
          "correctness": {
            "noNodejsModules": "off"
          }
        }
      }
    },
    {
      "includes": ["**/src/sentry/templates/sentry/error-page-embed.js"],
      "linter": {
        "rules": {
          "style": {},
          "suspicious": {
            "noVar": "off"
          }
        }
      }
    },
    {
      "includes": [
        "**/static/app/utils/replays/types.tsx",
        "**/static/app/utils/queryClient.tsx",
        "**/static/app/views/performance/traceDetails/styles.tsx",
        "**/static/app/icons/index.tsx",
        "**/static/app/components/tabs/index.tsx",
        "**/static/app/components/sparklines/line.tsx",
        "**/static/app/types/index.tsx",
        "**/tests/js/sentry-test/reactTestingLibrary.tsx",
        "**/tests/js/sentry-test/index.tsx"
      ],
      "linter": {
        "rules": {
          "performance": {
            "noBarrelFile": "off"
          }
        }
      }
    }
  ]
}
```

# Emitted Messages

```block
configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Migration results:
  
  - biome.json: configuration successfully migrated.
  

```
